--- a/article/article-2.html
+++ b/article/article-2.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 	<head>
@@ -50,30 +49,31 @@
 											<ul id="demo-nav" class="demolayout">
 
 												<li>
-													<a class="active" href="../index.html">目录</a>
+													<a class="active" href="../index.html">前言</a>
 												</li>
 												<li>
-													<a class="" href="article-3.html">1.制作热身</a>
+													<a class="" href="article-4.html">序</a>
 												</li>
 												<li>
-													<a class="" href="article-6.html">2.制作内容</a>
+													<a class="" href="article/article-6.html">目录</a>
 												</li>
 												<li>
-													<a class="" href="article-10.html"> 3.搭建平台</a>
+													<a class="" href="article/article-6.html">第一章 知识专题？</a>
 												</li>
 												<li>
-													<a class="" href="#tab4">4.制作电子小册子</a>
+													<a class="" href="article-10.html">第二章 30分钟挑战赛</a>
 												</li>
 												<li>
-													<a class="" href="#tab5">5.示范案例</a>
+													<a class="" href="#tab4">第三章 一周挑战赛</a>
 												</li>
 												<li>
-													<a class="" href="#tab6">6.更多资源</a>
+													<a class="" href="#tab5">第四章 具体范例</a>
+												</li>
+												<li>
+													<a class="" href="#tab6">第五章 后记</a>
 												</li>
 
 											</ul>
-
-
 
 										</div>
 
@@ -84,31 +84,26 @@
 
 											<div style="display: block;" class="tab" id="tab1">
 
-												<h2>自 序 关于打开网站的正确方式</h2>
+												<h2>前言</h2>
 												<p>
-													本网站属于知识专题学习网站，是围绕知识专题构建及与知识专题构建密切相关专题，展开深入研究的资源学习型网站。通俗的讲，就是教你如何构建自己的专题学习网站，通过网站形式，将自己的知识系统化、结构化、品牌化的呈现出来，进入万物互联的网络世界，成为网络世界中的交换节点，交换价值，创造价值。
+													<b>场景2：</b>
+													<p>好友（魔鬼琦）：流的技能，想着结合一下。</p>
+													<p>我：明白，就是替代每次都说一遍，直接个她扔一个链接，就可以自己了解，对吧。</p>
+													<p>好友（魔鬼琦）：恩，对，就是这个意思。</p>
+													<p>我：那可以做一个知识专题，可以全面的满足你的需求，不仅能不断积累丰富，对于你来说，还不用像公众号一样总去维护。</p>
+													<p>好友（魔鬼琦）：哦，真的么，听起来挺好的，怎么做呀？</p>
+													<p>我：我正好做了一个“手把手教你建设自己的至“知识专题””，给你看看。</p>
+													<p>好友（魔鬼琦）：太好了，难么？我可是什么都不会的文科生。</p>
+													<p>我：没问题，半个小时就能搞定。有什么不明白，我附带回答疑问服务。</p>
+													<p>好友（魔鬼琦）：今天真是问对人了。</p>
 												</p>
+
 												<p>
-													本网站为学习者提供了一个知识专题构建系统的知识结构, 为学习者创造了进行自主学习和协作学习的环境,还能够对学习者的学习情况进行及时的反馈。
-												</p>
-												<h3>目录</h3>
+													<b>场景3：</b>
 
-												<ul class="list">
+													<p>A：听说茶香做了个“知识专题”。</p>
+													<p>B：是双核驱动群一起做的吧。</p>
 
-													<li>3.搭建平台</li>
-													<li> 3.1.如何搭建网站</li>
-													<li>3.1.1.用bitcron输出知识专题</li>
-													<li> 3.1.2.用github输出知识专题</li>
-													<li> 3.1.2.1.拥有一个GitHub账号</li>
-													<li> 3.1.2.3.编辑网站内容</li>
-													<li> 3.2.拥有自己的域名（进阶版）</li>
-													<p></p>
-													<li> 4.制作电子小册子（以后增加）</li>
-													<li> 4.1.为什么要做电子小册子</li>
-													<li> 4.2.如何做电子小册子</li>
-
-													<li> 5.示范案例</li>
-													<li> 6.更多资源</li>
 
 											</div>
 
