--- a/article/article-3.html
+++ b/article/article-3.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 	<head>
@@ -49,30 +48,31 @@
 											<ul id="demo-nav" class="demolayout">
 
 												<li>
-													<a class="" href="../index.html">目录</a>
+													<a class="active" href="../index.html">前言</a>
 												</li>
 												<li>
-													<a class="active" href="article-3.html">1.制作热身</a>
+													<a class="" href="article-4.html">序</a>
 												</li>
 												<li>
-													<a class="" href="article-6.html">2.制作内容</a>
+													<a class="" href="article/article-6.html">目录</a>
 												</li>
 												<li>
-													<a class="" href="article-10.html"> 3.搭建平台</a>
+													<a class="" href="article/article-6.html">第一章 知识专题？</a>
 												</li>
 												<li>
-													<a class="" href="#tab4">4.制作电子小册子</a>
+													<a class="" href="article-10.html">第二章 30分钟挑战赛</a>
 												</li>
 												<li>
-													<a class="" href="#tab5">5.示范案例</a>
+													<a class="" href="#tab4">第三章 一周挑战赛</a>
 												</li>
 												<li>
-													<a class="" href="#tab6">6.更多资源</a>
+													<a class="" href="#tab5">第四章 具体范例</a>
+												</li>
+												<li>
+													<a class="" href="#tab6">第五章 后记</a>
 												</li>
 
 											</ul>
-
-
 
 										</div>
 
@@ -82,63 +82,41 @@
 										<div class="tabs-container">
 
 											<div style="display: block;" class="tab" id="tab1">
-
-												<h2>1.制作热身</h2>
+												<h2>前言</h2>
 												<p>
-													在开头，我想讲讲我的故事，说说这个网站是怎么产生的。
-												</p>
-												<p>
-													在认识易仁永澄之前，我是个整天忙忙叨叨的女人，被个人情绪、家庭琐事和工作任务缠绕的，感觉自己跳进了盘丝洞脱不开身。也许有的人觉得我过的还不错，是生在福中不知福，但只有我自己知道，内心总是莫名的产生些恐慌出来，却又无法解释。
-												</p>
-
-												<p>
-													2016年年底，我在一个偶然的机会，参加了一个叫“揩油”的活动，进入到“幸福进化俱乐部”，认识了易仁永澄，自此我的生活就开始变化了。
+													<b>场景3：</b>
+													<p>A：听说永澄老师也指导来着。</p>
+													<p>B：这种方式很好，我也去看看，你知道怎么联系她么。</p>
+													<p>A：我给你推她的知识专题的链接，上面有联系方式。</p>
+													<p>B：发我。</p>
 												</p>
 
-												<p>
-													我从每日浑浑噩噩，到现在每日记录时间开销。我从狗熊掰棒子似的学习习惯，到不断积累学习成果，并形成专题学习网站。我从把孩子教育寄希望于教育机构，到现在我能言传身教。这些得益于永澄老师的带领，同侪伙伴的赋能，家人的支持，以及我自己的努力。
+												<p class="indent">
+													哈哈，看到了么，想装、想积累、想被小伙伴甚至大牛们看到，就来一起做吧，从易到难，可是30分钟入手，可以不断积累，总有一款适合你。</p>
+
+												<p style="text-align:center"><img src="../images/4-1.gif" alt="" width="310" height="250" center/>
 												</p>
 
-												<p>
-													当初做这个资源学习型网站，是永澄老师给我的一个任务。他的一篇名为
-													<a href="https://mp.weixin.qq.com/s/RAdoyK3PMY5HVAMu5fm4Eg" target="_blank">
-														《永澄：尝试写个小册子——如何生成知识专题》
-													</a>
-
-													首次提法，做知识专题。在他的帮助和指导下，我从忐忑到专心积累，逐步完成此网站的搭建。但这只是个开始，网站生存和发展的根本,是能聚集多少用户,就能发挥多少价值,没有用户和反馈,网站就没有价值。
-												</p>
-
-												<p>
-													我希望“知识专题”资源学习型网站有你想要的东西，也希望你能给我提供反馈，你的需求是我把网站建设的更有价值的重要依据。希望我们共同将自己的已积累价值，通过专题资源学习型网站的形式输出，和时间做朋友等待收货。
-												</p>
-
-												<h3>1.1 知识专题是怎么回事?</h3>
-
-												<p>
-													散乱的、非有序化运动的知识是无法成为生产力的。它既不会自动地创造财富,也不能无条件地转移权力。没有组织或不加控制的知识不仅不是生产力,相反,还可能成为一种极大的破坏力。
-												</p>
-
+												
 											</div>
 
 										</div>
 
+										<div class="clear"></div>
 									</div>
+									<div class="book_bottom">
 
-									<div class="clear"></div>
+										<!--新增代码 开始-->
+										<span class="page-index">3</span>
+										<!--新增代码 结束-->
+									</div>
 								</div>
-								<div class="book_bottom">
 
-									<!--新增代码 开始-->
-									<span class="page-index">3</span>
-									<!--新增代码 结束-->
-								</div>
+								<div class="clear"></div>
 					</div>
-
-					<div class="clear"></div>
 				</div>
-			</div>
 
-		</div>
+			</div>
 
 	</body>
 
