--- a/article/article-5.html
+++ b/article/article-5.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 	<head>
@@ -50,30 +49,31 @@
 											<ul id="demo-nav" class="demolayout">
 
 												<li>
-													<a class="" href="../index.html">目录</a>
+													<a class="active" href="../index.html">前言</a>
 												</li>
 												<li>
-													<a class="active" href="article-3.html">1.制作热身</a>
+													<a class="" href="article-4.html">序</a>
 												</li>
 												<li>
-													<a class="" href="article-6.html">2.制作内容</a>
+													<a class="" href="article/article-6.html">目录</a>
 												</li>
 												<li>
-													<a class="" href="article-10.html"> 3.搭建平台</a>
+													<a class="" href="article/article-6.html">第一章 知识专题？</a>
 												</li>
 												<li>
-													<a class="" href="#tab4">4.制作电子小册子</a>
+													<a class="" href="article-10.html">第二章 30分钟挑战赛</a>
 												</li>
 												<li>
-													<a class="" href="#tab5">5.示范案例</a>
+													<a class="" href="#tab4">第三章 一周挑战赛</a>
 												</li>
 												<li>
-													<a class="" href="#tab6">6.更多资源</a>
+													<a class="" href="#tab5">第四章 具体范例</a>
+												</li>
+												<li>
+													<a class="" href="#tab6">第五章 后记</a>
 												</li>
 
 											</ul>
-
-
 
 										</div>
 
@@ -84,43 +84,32 @@
 
 											<div style="display: block;" class="tab" id="tab1">
 
-												<h2>1.制作热身</h2>
-												<p></p>
+												<h2>第一章 如何构建知识专题？</h2>
 
-												<h3>1.3 你的知识专题有人看吗?</h3>
-
-												<p>
-													这是我最初的担心，所以，我想写出来和大家共同探讨。这个问题其实是“果上努力”的典型问法。跳过为什么做，怎么做，做成什么样子，直接问这个结果是否能有收益。如果问这个问题，潜意识是说有收益我就做，没有我就不做的话，这个专题终究是做不成的。
+												<p class="indent">
+													知识专题就是某一个细分领域中的知识整合，简单来说就是一本简单的电子书。写一本电子书涉及到的能力非常多，难度也不小，但是，越是难度大，越能够在未来具有竞争力！
 												</p>
 
-												<p>
-													我的初心是什么？是刚才回答的Why的答案，我为什么要做这件事？那接下来，要问关于How的问题。我要如何实现这个结果呢？这件事我的思路是什么？这件事情可以分为几个阶段呢？这方面永澄老师是专家，可以看他的微信公众号，
-													<a href="http://mp.weixin.qq.com/s/RrEDRLeKc88jSxby0tRiTg" target="_blank">
-														《产生优质思路所需要的5个原则》，
-													</a>
-													下面《制作内容》部分也有我个人的具体思考和答案，供您参考。
+												<p class="indent">
+													本专题给出了一个最简单的方法，那就是从工具层切入，通过首胜的方式来帮助更多人开始构建自己的知识专题。
 												</p>
 
-												<h3>1.4 如何面对过程中的坑</h3>
-												<p>
-													任何一件事，如果它已经在能力圈你的以外，需要你离开舒适区，去探索未知的、自己不熟悉的领域，都会遇到意料不到的难题，也许掉坑能爬出来，也许就一直在里面走不出来，让这件事请烂尾，最后给自己个烂理由，放松自己的认知，给自己个交代就草草了事。
+												<p></p>
+												<p></p>
+												<p></p>
+												<p></p>
+												<p></p>
+												<p></p>
+												<p></p>
+
+												<p style="text-align:left"><img src="../images/5-1.png" alt="" width="540" height="249" center/>
 												</p>
+<p></p>
+												<p></p>
+												<p></p>
+												<p></p>
 
-												<p>上面其实都是我的惨痛经验，在制作知识专题的过程中，我历时3个月，在需要承担家庭重任、完成紧张工作、处理突发事件的同时，完成了这个知识专题的制作，呈现在大家面前。我总结一下我遇到的坑，以期大家能迈过它们，实现自己的目标。</p>
-
-												<p></p>
-
-												<ul id="" class="">
-													<li>1.觉得很重要，但不知道写什么？</li>
-													<li>2.已经积累很多，但希望完美呈现。</li>
-													<li>3.技术小白，没自信能完成网站制作。</li>
-												</ul>
-
-												<p></p>
-												<p></p>
-												<p></p>
-												<p></p>
-												<p></p>
+												
 
 											</div>
 
