--- a/article/article-6.html
+++ b/article/article-6.html
@@ -50,25 +50,28 @@
 											<ul id="demo-nav" class="demolayout">
 
 												<li>
-													<a class="" href="../index.html">目录</a>
+													<a class="active" href="../index.html">前言</a>
 												</li>
 												<li>
-													<a class="" href="article-3.html">1.制作热身</a>
+													<a class="" href="article-4.html">序</a>
 												</li>
 												<li>
-													<a class="active" href="article-6.html">2.制作内容</a>
+													<a class="" href="article/article-6.html">目录</a>
 												</li>
 												<li>
-													<a class="" href="article-10.html"> 3.搭建平台</a>
+													<a class="" href="article/article-6.html">第一章 知识专题？</a>
 												</li>
 												<li>
-													<a class="" href="#tab4">4.制作电子小册子</a>
+													<a class="" href="article-10.html">第二章 30分钟挑战赛</a>
 												</li>
 												<li>
-													<a class="" href="#tab5">5.示范案例</a>
+													<a class="" href="#tab4">第三章 一周挑战赛</a>
 												</li>
 												<li>
-													<a class="" href="#tab6">6.更多资源</a>
+													<a class="" href="#tab5">第四章 具体范例</a>
+												</li>
+												<li>
+													<a class="" href="#tab6">第五章 后记</a>
 												</li>
 
 											</ul>
