--- a/index.html
+++ b/index.html
@@ -47,25 +47,28 @@
 									<ul id="demo-nav" class="demolayout">
 
 										<li>
-											<a class="active" href="index.html">目录</a>
+											<a class="active" href="index.html">前言</a>
 										</li>
 										<li>
-											<a class="" href="article/article-3.html">1.制作热身</a>
+											<a class="" href="article-4.html">序</a>
 										</li>
 										<li>
-											<a class="" href="article/article-6.html">2.制作内容</a>
+											<a class="" href="article/article-6.html">目录</a>
 										</li>
 										<li>
-											<a class="" href="article-10.html"> 3.搭建平台</a>
+											<a class="" href="article/article-6.html">第一章 知识专题？</a>
 										</li>
 										<li>
-											<a class="" href="#tab4">4.制作电子小册子</a>
+											<a class="" href="article-10.html">第二章 30分钟挑战赛</a>
 										</li>
 										<li>
-											<a class="" href="#tab5">5.示范案例</a>
+											<a class="" href="#tab4">第三章 一周挑战赛</a>
 										</li>
 										<li>
-											<a class="" href="#tab6">6.更多资源</a>
+											<a class="" href="#tab5">第四章 具体范例</a>
+										</li>
+										<li>
+											<a class="" href="#tab6">第五章 后记</a>
 										</li>
 
 									</ul>
@@ -83,57 +86,24 @@
 								<div class="tabs-container">
 
 									<div style="display: block;" class="tab" id="tab0">
-										<h2>自 序 关于打开网站的正确方式</h2>
+										<h2>前言</h2>
 										<p>
-											本网站属于知识专题学习网站，是围绕知识专题构建及与知识专题构建密切相关专题，展开深入研究的资源学习型网站。通俗的讲，就是教你如何构建自己的专题学习网站，通过网站形式，将自己的知识系统化、结构化、品牌化的呈现出来，进入万物互联的网络世界，成为网络世界中的交换节点，交换价值，创造价值。
+											<b>场景1：</b>
+											<p>在五层大会议室，领导在台上讲话，已经1个多小时了。同事在旁边看我在鼓捣电脑，好奇的问。</p>
+											<p>同事（小美）：你最近忙什么呢？</p>
+											<p>我：工作上按部就班的干，年底忙活了一阵。另外，我自己业余时间，抽空做了一网站，是个知识专题</p>
+											<p>同事（小美）：好厉害呀，虽然不知道是什么，你自己会做网站呀。</p>
+											<p> 我：享受感觉1秒钟~</p>
+											<p>同事（小美）：好做么，你做的真好看，也教教我呗。</p>
+											<p>我：没问题，按照这个做，很容易的，有什么问题问我就是了。</p>
 										</p>
 										<p>
-											本网站为学习者提供了一个知识专题构建系统的知识结构, 为学习者创造了进行自主学习和协作学习的环境,还能够对学习者的学习情况进行及时的反馈。
-										</p>
-										<h3>目录</h3>
-
-										<ul class="list">
-											<li>
-												<a href="index.html">自 序 关于打开网站的正确方式</a>
-											</li>
-
-											<li>
-												<a href="article/article-3.html">1.制作热身 </a>
-											</li>
-
-											<li>
-												<a href="article/article-3.html">1.1. 知识专题是怎么回事? </a>
-											</li>
-											<li>
-												<a href="article/article-4.html">1.2.“知识专题”有什么用？ </a>
-											</li>
-											<li>
-												<a href="article/article-5.html">1.3. 你的知识专题有人看吗? </a>
-											</li>
-											<li>
-												<a href="article/article-5.html">1.4.如何面对过程中的坑 </a>
-											</li>
-											<p></p>
-											<li>
-												<a href="article/article-6.html">2.制作内容 </a>
-											</li>
-											<li>
-												<a href="article/article-6.html">2.1.明确你的目标 </a>
-											</li>
-											<li>
-												<a href="article/article-9.html">2.2.了解你的读者</a>
-											</li>
-											<li>
-												<a href="article/article-9.html">2.3.用头脑风暴锁定你想要表达的内容 </a>
-											</li>
-											<li>
-												<a href="article/article-9.html">2.4.修改，清晰传递你的信息 </a>
-											</li>
-											<li>
-												<a href="article/article-9.html">2.5.收集反馈，不断积累和迭代你的专题 </a>
-											</li>
-
-										</ul>
+											<b>场景2：</b>
+											<p>在出租车上，和好友一起逛街的路上聊天。</p>
+											<p>好友（魔鬼琦）：亲爱的，知道你原来有个微信公众号，教教我。</p>
+											<p>我：哦，怎么想做公众号呀？</p>
+											<p>好友（魔鬼琦）：也不想太复杂，我想做个电子名片似的东西。我们小区好多妈妈都想让我教钢琴，我原来没想过这事，最近，我琢磨着自己，钢琴十级，有音乐学院牛人的资源，同时，我还有心理学和英语交</p>
+			
 									</div>
 
 								</div>
