--- a/article/article-6.html
+++ b/article/article-6.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 	<head>
@@ -76,7 +75,6 @@
 
 											</ul>
 
-
 										</div>
 
 										<div class="inner_copyright">Collect from
@@ -86,26 +84,22 @@
 
 											<div style="display: block;" class="tab" id="tab1">
 
-												<h2>2.制作内容</h2>
-												<p>与商业网站、综合性教育网站、网络资源库、网络课程不同, “知识专题”网站是基于网络的研究性学习支持系统。</p>
-												<p>网站设计的指导思想是建构主义理论，该理论认为知识不是通过教师传授得到, 而是学习者在一定的情境即社会文化背景下, 借助其他人 (包括教师和学习伙伴) 的帮助, 利用必要的学习资料, 通过意义建构的方式而获得。</p>
-
-												<p>网站设计的理念遵循理解层次（Neuro-Logical Levels），通过逐级思考和回答问题，有效寻找到网站的定位和目标群体，更好的完成自身知识，从知识积累到价值交换的华丽转身。</p>
-
-												<p>以“知识专题”专题学习网站为例,不仅涵盖了专题学习网站制作有关知识,还溶进了黄金思维圈、知识积累、品牌建设、故事思维等方面, 此外, 通过对具体案例的解读, 可以边学边制作自己的专题学习网站，并在网站中进行如何制作学习网站的交流和探讨。</p>
-
-												<p>请跟随我的脚步，开始思考你自己的“知识专题”网站吧。请准备一张纸，记录下你的回答。</p>
-
-												<h3>2.1 明确你的目标</h3>
-
-												<p>
-													这是我最初的担心，所以，我想写出来和大家共同探讨。这个问题其实是“果上努力”的典型问法。跳过为什么做，怎么做，做成什么样子，直接问这个结果是否能有收益。如果问这个问题，潜意识是说有收益我就做，没有我就不做的话，这个专题终究是做不成的。
-												</p>
-
+												<h2>第二章 30分钟挑战赛</h2>
 												<p></p>
-												<h4>1) 身份定位</h4>
-												<p>【问题】你以什么身份搭建、经营、维护、升级这个“知识专题”专题学习网站？<br> 【回答】终身学习者、持续知识积累者、将知识成果模块化、产品化、等待知识交换的人。
+
+												<p style="text-align:left"><img src="../images/6-1.gif" alt="" width="510" height="200" center/>
 												</p>
+
+												<p class="indent">我们尝试一下，用30分钟学会做个电子书吧。我总结了一下，最小的步骤共三步：</p>
+												<li>知识主题：准备一个知识主题，这个主题可以很小，可以是你的某个工作、一篇读书笔记都可以。</li>
+
+												<li>目录结构：呈现出书的框架和轮廓，可以参考我的目录。</li>
+
+												<li>呈现方式：选择一种呈现的方法，目前提供两种方式，bitcron和github。</li>
+
+												<p class="indent">Bitcron，自带结构化的显示，简单易学，只需网页即能工作，支持 Markdown 语法，通过 Web、微信、Dropbox 一键发布博客，让用户专注于写作本身。只是样子单一，无法满足更多的审美需求。</p>
+
+												<p class="indent">Github，容易上手，可以关联独立域名，协同管理，有大量开源代码和网站模板，可以直接使用。在外表样子上有自己的想法的伙伴，可</p>
 
 											</div>
 
