--- a/article/article-7.html
+++ b/article/article-7.html
@@ -49,30 +49,31 @@
 											<ul id="demo-nav" class="demolayout">
 
 												<li>
-													<a class="" href="../index.html">目录</a>
+													<a class="active" href="../index.html">前言</a>
 												</li>
 												<li>
-													<a class="" href="article-3.html">1.制作热身</a>
+													<a class="" href="article-4.html">序</a>
 												</li>
 												<li>
-													<a class="active" href="article-6.html">2.制作内容</a>
+													<a class="" href="article/article-6.html">目录</a>
 												</li>
 												<li>
-													<a class="" href="article-10.html"> 3.搭建平台</a>
+													<a class="" href="article/article-6.html">第一章 知识专题？</a>
 												</li>
 												<li>
-													<a class="" href="#tab4">4.制作电子小册子</a>
+													<a class="" href="article-10.html">第二章 30分钟挑战赛</a>
 												</li>
 												<li>
-													<a class="" href="#tab5">5.示范案例</a>
+													<a class="" href="#tab4">第三章 一周挑战赛</a>
 												</li>
 												<li>
-													<a class="" href="#tab6">6.更多资源</a>
+													<a class="" href="#tab5">第四章 具体范例</a>
+												</li>
+												<li>
+													<a class="" href="#tab6">第五章 后记</a>
 												</li>
 
 											</ul>
-
-
 
 										</div>
 
@@ -83,39 +84,20 @@
 
 											<div style="display: block;" class="tab" id="tab1">
 
-												<h2>2.制作内容</h2>
+												<h2>第二章 30分钟挑战赛</h2>
+												<p>
+													以选择。</p>
+
 												<p></p>
-
-												<h3>2.1 明确你的目标</h3>
-
-												<p></p>
-												<h4>2) 信念、价值观</h4>
-												<p>【问题】1.为什么要做“知识专题”？<br> 【回答】和我的价值观相匹配，我相信我能给读者提供有价值的知识成果。即便现在不成熟，我将会一方面持续积累和模块化知识成果，另一方面通过读者的需求反馈持续更新“知识专题”。最终实现，我能在陌生人的写作网络快速被识别，获得交换价值。
-												</p>
-
-												<p>【问题】2.“知识专题”对你的意义是什么？<br> 【回答】锻炼我“排难”的优势，获得复利和边际成本递减，寻找“同频”小伙伴，进入万物互联的网络成为交换节点，为跃迁做势能的准备。
-												</p>
-
-												<p>【问题】3.“知识专题”对读者的意义是什么？<br> 【回答】通过阅读我的“知识专题”，有新的想法、新的理念、新的行动，通过我的“知识专题”找到组织，结交“同频小伙伴”。
-												</p>
-
-												<h4>3)	结果层面</h4>
-												<p>【问题】1.想象一下“知识专题”最终的样子？<br> 【回答】简洁、清晰；有原则、理论、方法、实例；能反馈、能生长；通俗易懂、图文并茂；
-												</p>
-
-												<p>【问题】2. “知识专题”成为你想要的样子后，你的满意度打几分？<br> 【回答】10分；
-												</p>
-
-												<p>【问题】3.想象一下读者使用“知识专题”后，他的满意度打几分？<br> 【回答】6分；
-												</p>
-
+												<p class="indent">恭喜你，你已经打开了知识专题制作的黑盒子。如果你已经准备好了，请你准备5个小时，大约一周时间，每天1小时，你就能真正获得一个自己的知识专题网站。</p>
 												<p></p>
 												<p></p>
 												<p></p>
+												<p></p>												
+												<p></p>	
 												<p></p>
-												<p></p>
-												<p></p>
-
+												
+												<p style="text-align:center"><img src="../images/7-1.jpg" alt="" width="278" height="314" center/>
 											</div>
 
 										</div>
