--- a/article/article-4.html
+++ b/article/article-4.html
@@ -55,7 +55,7 @@
 													<a class="" href="article-4.html">序</a>
 												</li>
 												<li>
-													<a class="" href="article/article-6.html">目录</a>
+													<a class="" href="article-5.html">目录</a>
 												</li>
 												<li>
 													<a class="" href="article/article-6.html">第一章 知识专题？</a>
