--- a/article/article-5.html
+++ b/article/article-5.html
@@ -55,10 +55,10 @@
 													<a class="" href="article-4.html">序</a>
 												</li>
 												<li>
-													<a class="" href="article/article-6.html">目录</a>
+													<a class="" href="article-5.html">目录</a>
 												</li>
 												<li>
-													<a class="" href="article/article-6.html">第一章 知识专题？</a>
+													<a class="" href="article-7.html">第一章 知识专题？</a>
 												</li>
 												<li>
 													<a class="" href="article-10.html">第二章 30分钟挑战赛</a>
@@ -84,32 +84,74 @@
 
 											<div style="display: block;" class="tab" id="tab1">
 
-												<h2>第一章 如何构建知识专题？</h2>
-
-												<p class="indent">
-													知识专题就是某一个细分领域中的知识整合，简单来说就是一本简单的电子书。写一本电子书涉及到的能力非常多，难度也不小，但是，越是难度大，越能够在未来具有竞争力！
-												</p>
-
-												<p class="indent">
-													本专题给出了一个最简单的方法，那就是从工具层切入，通过首胜的方式来帮助更多人开始构建自己的知识专题。
-												</p>
-
-												<p></p>
-												<p></p>
-												<p></p>
-												<p></p>
-												<p></p>
-												<p></p>
+												<h2>目录</h2>
 												<p></p>
 
-												<p style="text-align:left"><img src="../images/5-1.png" alt="" width="540" height="249" center/>
-												</p>
-<p></p>
+												<li>
+													<a href="../index.html">前言 </a>
+												</li>
 												<p></p>
+												<li>
+													<a href="article-4.html">序 为什么我们需要创造更多的知识专题</a>
+												</li>
+												<p></p>		
+												<li>
+													<a href="article-5.html">目录</a>
+												</li>
+												<p></p>												
+														
+												<li>
+													<a href="article-6.html">第一章 如何构建知识专题？</a>
+												</li>
+												<p></p>												
+												<li>
+													<a href="article-7.html">第二章 30分钟挑战赛</a>
+												</li>
+												<p></p>												
+												<li>
+													<a href="article/article-5.html">第三章 一周挑战赛 </a>
+												</li>
 												<p></p>
-												<p></p>
+												<li>
+													<a href="article/article-6.html">1. 用Bitcron输出知识专题</a>
+												</li>
+												<p></p>												
+												<li>
+													<a href="article/article-6.html">（1）拥有一个Bitcron账号 </a>
+												</li>
+												<p></p>												
+												<li>
+													<a href="article/article-9.html">（2）初步创建自己的网页</a>
+												</li>
+												<p></p>												
+												<li>
+													<a href="article/article-9.html">（3）编辑网站内容 </a>
+												</li>
+												<p></p>												
+												<li>
+													<a href="article/article-9.html">2. 用github输出知识专题 </a>
+												</li>
+												<p></p>												
+												<li>
+													<a href="article/article-9.html">（1）拥有一个GitHub账号 </a>
+												</li>
+												<p></p>												
+												<li>
+													<a href="article/article-9.html">（2）初步创建自己的网页</a>
+												</li>
+												<p></p>												
+												<li>
+													<a href="article/article-9.html">（3）编辑网站内容 </a>
+												</li>
+												<p></p>												
+												<li>
+													<a href="article/article-9.html">第四章 具体范例</a>
+												</li>
+												<p></p>												
+												<li>
+													<a href="article/article-9.html">第五章 后记</a>
+												</li>												
 
-												
 
 											</div>
 
