--- a/article/article-6.html
+++ b/article/article-6.html
@@ -55,7 +55,7 @@
 													<a class="" href="article-4.html">序</a>
 												</li>
 												<li>
-													<a class="" href="article/article-6.html">目录</a>
+													<a class="" href="article-5.html">目录</a>
 												</li>
 												<li>
 													<a class="" href="article/article-6.html">第一章 知识专题？</a>
@@ -84,22 +84,32 @@
 
 											<div style="display: block;" class="tab" id="tab1">
 
-												<h2>第二章 30分钟挑战赛</h2>
-												<p></p>
+												<h2>第一章 如何构建知识专题？</h2>
 
-												<p style="text-align:left"><img src="../images/6-1.gif" alt="" width="510" height="200" center/>
+												<p class="indent">
+													知识专题就是某一个细分领域中的知识整合，简单来说就是一本简单的电子书。写一本电子书涉及到的能力非常多，难度也不小，但是，越是难度大，越能够在未来具有竞争力！
 												</p>
 
-												<p class="indent">我们尝试一下，用30分钟学会做个电子书吧。我总结了一下，最小的步骤共三步：</p>
-												<li>知识主题：准备一个知识主题，这个主题可以很小，可以是你的某个工作、一篇读书笔记都可以。</li>
+												<p class="indent">
+													本专题给出了一个最简单的方法，那就是从工具层切入，通过首胜的方式来帮助更多人开始构建自己的知识专题。
+												</p>
 
-												<li>目录结构：呈现出书的框架和轮廓，可以参考我的目录。</li>
+												<p></p>
+												<p></p>
+												<p></p>
+												<p></p>
+												<p></p>
+												<p></p>
+												<p></p>
 
-												<li>呈现方式：选择一种呈现的方法，目前提供两种方式，bitcron和github。</li>
+												<p style="text-align:left"><img src="../images/5-1.gif" alt="" width="540" height="249" center/>
+												</p>
+<p></p>
+												<p></p>
+												<p></p>
+												<p></p>
 
-												<p class="indent">Bitcron，自带结构化的显示，简单易学，只需网页即能工作，支持 Markdown 语法，通过 Web、微信、Dropbox 一键发布博客，让用户专注于写作本身。只是样子单一，无法满足更多的审美需求。</p>
-
-												<p class="indent">Github，容易上手，可以关联独立域名，协同管理，有大量开源代码和网站模板，可以直接使用。在外表样子上有自己的想法的伙伴，可</p>
+												
 
 											</div>
 
