--- a/article/article-11.html
+++ b/article/article-11.html
@@ -7,7 +7,9 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<title>手把手教你建设自己的“知识专题”</title>
 		<link rel="stylesheet" type="text/css" href="../style.css" />
+		<link rel="stylesheet" type="text/css" href="../css/prettyPhoto.css" />
 		<script src="../js/jquery-2.1.0.min.js"></script>
+		<script src="../js/jquery.prettyPhoto.js"></script>
 		<script src="../js/custom.js" type="text/javascript"></script>
 	</head>
 
@@ -27,6 +29,7 @@
 				<div class="logo">
 					手把手教你建设自己的“知识专题”
 				</div>
+				
 			</div>
 			<!-- End Header -->
 
@@ -48,31 +51,33 @@
 											<ul id="demo-nav" class="demolayout">
 
 												<li>
-													<a class="active" href="../index.html">前言</a>
+													<a class="" href="../index.html">目录</a>
 												</li>
 												<li>
-													<a class="" href="article-4.html">序</a>
+													<a class="" href="article-3.html">1.制作热身</a>
 												</li>
 												<li>
-													<a class="" href="article-5.html">目录</a>
+													<a class="" href="article-6.html">2.制作内容</a>
 												</li>
 												<li>
-													<a class="" href="article/article-6.html">第一章 知识专题？</a>
+													<a class="active" href="article-9.html"> 3.搭建平台</a>
 												</li>
 												<li>
-													<a class="" href="article-10.html">第二章 30分钟挑战赛</a>
+													<a class="" href="#tab4">4.制作电子小册子</a>
 												</li>
 												<li>
-													<a class="" href="#tab4">第三章 一周挑战赛</a>
+													<a class="" href="#tab5">5.示范案例</a>
 												</li>
 												<li>
-													<a class="" href="#tab5">第四章 具体范例</a>
-												</li>
-												<li>
-													<a class="" href="#tab6">第五章 后记</a>
+													<a class="" href="#tab6">6.更多资源</a>
 												</li>
 
 											</ul>
+
+											<div class="photo">
+												<img src="images/frame.png" alt="" title="" border="0" class="frame" />
+												<img src="images/picture.jpg" alt="" title="" border="0" class="picture" />
+											</div>
 
 										</div>
 
@@ -82,41 +87,54 @@
 										<div class="tabs-container">
 
 											<div style="display: block;" class="tab" id="tab1">
-												<h2>前言</h2>
+
+												<h2>3. 搭建平台</h2>
+												<p></p>
+
+												<h3>3.1 如何搭建网站</h3>
+												<p></p>
+
+												<h4>3.1.1 用bitcron输出知识专题</h4>
+												<p></p>
+
+												<h4>3.1.2 用github输出知识专题</h4>
+												<p></p>
+
+												<h5>3.1.2.1 拥有一个GitHub账号</h5>
+												<p>互联网崇尚自由与分享。GitHub是一个全世界程序员聚集起来的地方，大家互相分享自己的代码，提升别人，也提升自我。</p>
+
+												<p>第1步：注册</p>
+
 												<p>
-													<b>场景3：</b>
-													<p>A：听说永澄老师也指导来着。</p>
-													<p>B：这种方式很好，我也去看看，你知道怎么联系她么。</p>
-													<p>A：我给你推她的知识专题的链接，上面有联系方式。</p>
-													<p>B：发我。</p>
+													<a href="../images/1.jpg" rel="prettyPhoto" >
+														<img src="../images/1.jpg" alt="" width="310" height="250"/>
+													</a>
+													<!--<img src="../images/1.jpg" width="310" height="250" />-->
 												</p>
 
-												<p class="indent">
-													哈哈，看到了么，想装、想积累、想被小伙伴甚至大牛们看到，就来一起做吧，从易到难，可是30分钟入手，可以不断积累，总有一款适合你。</p>
+												<p></p>
 
-												<p style="text-align:center"><img src="../images/4-1.gif" alt="" width="310" height="250" center/>
-												</p>
-
-												
 											</div>
 
 										</div>
 
-										<div class="clear"></div>
 									</div>
-									<div class="book_bottom">
 
-										<!--新增代码 开始-->
-										<span class="page-index">3</span>
-										<!--新增代码 结束-->
-									</div>
+									<div class="clear"></div>
 								</div>
+								<div class="book_bottom">
 
-								<div class="clear"></div>
+									<!--新增代码 开始-->
+									<span class="page-index">9</span>
+									<!--新增代码 结束-->
+								</div>
 					</div>
-				</div>
 
+					<div class="clear"></div>
+				</div>
 			</div>
+
+		</div>
 
 	</body>
 
