--- a/article/article-8.html
+++ b/article/article-8.html
@@ -27,6 +27,7 @@
 				<div class="logo">
 					手把手教你建设自己的“知识专题”
 				</div>
+
 			</div>
 			<!-- End Header -->
 
@@ -48,30 +49,31 @@
 											<ul id="demo-nav" class="demolayout">
 
 												<li>
-													<a class="" href="../index.html">目录</a>
+													<a class="active" href="../index.html">前言</a>
 												</li>
 												<li>
-													<a class="" href="article-3.html">1.制作热身</a>
+													<a class="" href="article-4.html">序</a>
 												</li>
 												<li>
-													<a class="active" href="article-6.html">2.制作内容</a>
+													<a class="" href="article/article-6.html">目录</a>
 												</li>
 												<li>
-													<a class="" href="article-10.html"> 3.搭建平台</a>
+													<a class="" href="article/article-6.html">第一章 知识专题？</a>
 												</li>
 												<li>
-													<a class="" href="#tab4">4.制作电子小册子</a>
+													<a class="" href="article-10.html">第二章 30分钟挑战赛</a>
 												</li>
 												<li>
-													<a class="" href="#tab5">5.示范案例</a>
+													<a class="" href="#tab4">第三章 一周挑战赛</a>
 												</li>
 												<li>
-													<a class="" href="#tab6">6.更多资源</a>
+													<a class="" href="#tab5">第四章 具体范例</a>
+												</li>
+												<li>
+													<a class="" href="#tab6">第五章 后记</a>
 												</li>
 
 											</ul>
-
-
 
 										</div>
 
@@ -82,48 +84,20 @@
 
 											<div style="display: block;" class="tab" id="tab1">
 
-												<h2>2.制作内容</h2>
-												<p></p>
-
-												<h3>2.1 明确你的目标</h3>
-
-												<p></p>
-
-												<h4>4)	能力层面</h4>
-												<p>【问题】1.你需要什么知识、经验和技巧？你是否已具备，如何获取。
-													<br>【回答】
-													<br> （1）收集信息和学习能力，通过收集资料，学习建设个人网站;
-													<br> （2）技术支持：阿文、小喆、阿凯;
-													<br> （3）内容指导：易仁永澄、涂小鸦、梅姐。
-
-												</p>
-
-												<p>【问题】2.你的思路、决策和方法是什么？
-													<br>【回答】
-													<br> （1）先完成再完美;
-													<br> （2）做中学;
-													<br> （3）搭建网站框架，调试，学习，调试，学习……
-													<br> （4）撰写网站内容，撰写，反馈，修改，……
-													<br> （5）上线后，不断学习，持续完善。
-												</p>
+												<h2>第二章 30分钟挑战赛</h2>
+												<p>
+													以选择。</p>
 
 												<p></p>
-												<h4>5)	行为层面</h4>
-												<p>【问题】1.你计划花费多少成本（时间、金钱、精力），做这个“知识专题”。
-													<br>【回答】计划1个月完成，每天1小时。 </p>
-
-												<p>【问题】2.你计划“知识专题”的质量如何？
-													<br>【回答】在我能力范围内，先完成，再完美。 </p>
-
-												<p>【问题】3.你计划“知识专题”的制作进度如何？
-													<br>【回答】每天至少1个小时，用于将学习的知识进行实践。 </p>
-
+												<p class="indent">恭喜你，你已经打开了知识专题制作的黑盒子。如果你已经准备好了，请你准备5个小时，大约一周时间，每天1小时，你就能真正获得一个自己的知识专题网站。</p>
 												<p></p>
 												<p></p>
 												<p></p>
+												<p></p>												
+												<p></p>	
 												<p></p>
-												<p></p>
-												<p></p>
+												
+												<p style="text-align:center"><img src="../images/7-1.jpg" alt="" width="278" height="314" center/>
 											</div>
 
 										</div>
@@ -135,7 +109,7 @@
 								<div class="book_bottom">
 
 									<!--新增代码 开始-->
-									<span class="page-index">8</span>
+									<span class="page-index">7</span>
 									<!--新增代码 结束-->
 								</div>
 					</div>
