--- a/article/article-8.html
+++ b/article/article-8.html
@@ -49,22 +49,22 @@
 											<ul id="demo-nav" class="demolayout">
 
 												<li>
-													<a class="active" href="../index.html">前言</a>
+													<a class="" href="../index.html">前言</a>
 												</li>
 												<li>
 													<a class="" href="article-4.html">序</a>
 												</li>
 												<li>
-													<a class="" href="article/article-6.html">目录</a>
+													<a class="" href="article-5.html">目录</a>
 												</li>
 												<li>
-													<a class="" href="article/article-6.html">第一章 知识专题？</a>
+													<a class="" href="article-6.html">第一章 知识专题？</a>
 												</li>
 												<li>
-													<a class="" href="article-10.html">第二章 30分钟挑战赛</a>
+													<a class="active" href="article-7.html">第二章 30分钟挑战赛</a>
 												</li>
 												<li>
-													<a class="" href="#tab4">第三章 一周挑战赛</a>
+													<a class="" href="article-9.html">第三章 一周挑战赛</a>
 												</li>
 												<li>
 													<a class="" href="#tab5">第四章 具体范例</a>
@@ -72,7 +72,6 @@
 												<li>
 													<a class="" href="#tab6">第五章 后记</a>
 												</li>
-
 											</ul>
 
 										</div>
@@ -85,18 +84,11 @@
 											<div style="display: block;" class="tab" id="tab1">
 
 												<h2>第二章 30分钟挑战赛</h2>
-												<p>
-													以选择。</p>
-
+												<p class="indent">Github，容易上手，可以关联独立域名，协同管理，有大量开源代码和网站模板，可以直接使用。在外表样子上有自己的想法的伙伴，可以选择。本网站是用Github输出的具体实例。</p>												
 												<p></p>
 												<p class="indent">恭喜你，你已经打开了知识专题制作的黑盒子。如果你已经准备好了，请你准备5个小时，大约一周时间，每天1小时，你就能真正获得一个自己的知识专题网站。</p>
 												<p></p>
-												<p></p>
-												<p></p>
-												<p></p>												
-												<p></p>	
-												<p></p>
-												
+
 												<p style="text-align:center"><img src="../images/7-1.jpg" alt="" width="278" height="314" center/>
 											</div>
 
@@ -109,7 +101,7 @@
 								<div class="book_bottom">
 
 									<!--新增代码 开始-->
-									<span class="page-index">7</span>
+									<span class="page-index">8</span>
 									<!--新增代码 结束-->
 								</div>
 					</div>
