--- a/article/article-9.html
+++ b/article/article-9.html
@@ -48,30 +48,31 @@
 											<ul id="demo-nav" class="demolayout">
 
 												<li>
-													<a class="" href="../index.html">目录</a>
+													<a class="" href="../index.html">前言</a>
 												</li>
 												<li>
-													<a class="" href="article-3.html">1.制作热身</a>
+													<a class="" href="article-4.html">序</a>
 												</li>
 												<li>
-													<a class="active" href="article-6.html">2.制作内容</a>
+													<a class="" href="article-5.html">目录</a>
 												</li>
 												<li>
-													<a class="" href="article-10.html"> 3.搭建平台</a>
+													<a class="" href="article-6.html">第一章 知识专题？</a>
 												</li>
 												<li>
-													<a class="" href="#tab4">4.制作电子小册子</a>
+													<a class="" href="article-7.html">第二章 30分钟挑战赛</a>
 												</li>
 												<li>
-													<a class="" href="#tab5">5.示范案例</a>
+													<a class="active" href="article-9.html">第三章 一周挑战赛</a>
 												</li>
 												<li>
-													<a class="" href="#tab6">6.更多资源</a>
+													<a class="" href="#tab5">第四章 具体范例</a>
+												</li>
+												<li>
+													<a class="" href="#tab6">第五章 后记</a>
 												</li>
 
 											</ul>
-
-
 
 										</div>
 
@@ -82,48 +83,17 @@
 
 											<div style="display: block;" class="tab" id="tab1">
 
-												<h2>2.制作内容</h2>
+												<h2>第三章 一周挑战赛</h2>
 												<p></p>
+												<p class="indent">前面，我们已经有了要做的知识专题的框架，也能对外宣称自己有知识专题了，那么如何更好的呈现给大家呢。下面，我们用一周时间来挑战自己，从工具层面入手，学会一门技能吧。本周的重点是学会搭建网站。</p>
+												<p class="indent">之前您已经了解了不同技术输出网站的特点，确定选择用那种方式输出网站，以下是具体方式，请您根据实际需要选择。</p>
+												<h3>1. 用Bitcron输出知识专题</h3>
 
-												<h3>2.1 明确你的目标</h3>
+												<p>&nbsp;&nbsp;&nbsp;&nbsp;特别说明：本网站是“知识专题”的集合，此部分由小喆的“Bitcron知识专题”提供内容，链接为
+													<a href="http://mml.bitcron.com/" target="_blank">http://mml.bitcron.com/，</a>具体内容请可点击前往学习，本网站不再赘述。</p>
+												<p class="indent">我总结了一下，最小的步骤共四步：（点击图片放大）</p>
+											
 
-												<p></p>
-
-												<h4>4)	能力层面</h4>
-												<p>【问题】1.你需要什么知识、经验和技巧？你是否已具备，如何获取。
-													<br>【回答】
-													<br> （1）收集信息和学习能力，通过收集资料，学习建设个人网站;
-													<br> （2）技术支持：阿文、小喆、阿凯;
-													<br> （3）内容指导：易仁永澄、涂小鸦、梅姐。
-
-												</p>
-
-												<p>【问题】2.你的思路、决策和方法是什么？
-													<br>【回答】
-													<br> （1）先完成再完美;
-													<br> （2）做中学;
-													<br> （3）搭建网站框架，调试，学习，调试，学习……
-													<br> （4）撰写网站内容，撰写，反馈，修改，……
-													<br> （5）上线后，不断学习，持续完善。
-												</p>
-
-												<p></p>
-												<h4>5)	行为层面</h4>
-												<p>【问题】1.你计划花费多少成本（时间、金钱、精力），做这个“知识专题”。
-													<br>【回答】计划1个月完成，每天1小时。 </p>
-
-												<p>【问题】2.你计划“知识专题”的质量如何？
-													<br>【回答】在我能力范围内，先完成，再完美。 </p>
-
-												<p>【问题】3.你计划“知识专题”的制作进度如何？
-													<br>【回答】每天至少1个小时，用于将学习的知识进行实践。 </p>
-
-												<p></p>
-												<p></p>
-												<p></p>
-												<p></p>
-												<p></p>
-												<p></p>
 											</div>
 
 										</div>
@@ -135,7 +105,7 @@
 								<div class="book_bottom">
 
 									<!--新增代码 开始-->
-									<span class="page-index">8</span>
+									<span class="page-index">9</span>
 									<!--新增代码 结束-->
 								</div>
 					</div>
