--- a/article/article-5.html
+++ b/article/article-5.html
@@ -49,22 +49,22 @@
 											<ul id="demo-nav" class="demolayout">
 
 												<li>
-													<a class="active" href="../index.html">前言</a>
+													<a class="" href="../index.html">前言</a>
 												</li>
 												<li>
 													<a class="" href="article-4.html">序</a>
 												</li>
 												<li>
-													<a class="" href="article-5.html">目录</a>
+													<a class="active" href="article-5.html">目录</a>
 												</li>
 												<li>
-													<a class="" href="article-7.html">第一章 知识专题？</a>
+													<a class="" href="article-6.html">第一章 知识专题？</a>
 												</li>
 												<li>
-													<a class="" href="article-10.html">第二章 30分钟挑战赛</a>
+													<a class="" href="article-7.html">第二章 30分钟挑战赛</a>
 												</li>
 												<li>
-													<a class="" href="#tab4">第三章 一周挑战赛</a>
+													<a class="" href="article-9.html">第三章 一周挑战赛</a>
 												</li>
 												<li>
 													<a class="" href="#tab5">第四章 具体范例</a>
@@ -127,7 +127,7 @@
 												<li>
 													<a href="article/article-9.html">（3）编辑网站内容 </a>
 												</li>
-												<p></p>												
+												<p></p>	
 												<li>
 													<a href="article/article-9.html">2. 用github输出知识专题 </a>
 												</li>
