--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
 											<a class="active" href="index.html">前言</a>
 										</li>
 										<li>
-											<a class="" href="article-4.html">序</a>
+											<a class="" href="article/article-4.html">序</a>
 										</li>
 										<li>
-											<a class="" href="article/article-6.html">目录</a>
+											<a class="" href="article/article-5.html">目录</a>
 										</li>
 										<li>
 											<a class="" href="article/article-6.html">第一章 知识专题？</a>
 										</li>
 										<li>
-											<a class="" href="article-10.html">第二章 30分钟挑战赛</a>
+											<a class="" href="article/article-7.html">第二章 30分钟挑战赛</a>
 										</li>
 										<li>
-											<a class="" href="#tab4">第三章 一周挑战赛</a>
+											<a class="" href="article-9.html">第三章 一周挑战赛</a>
 										</li>
 										<li>
 											<a class="" href="#tab5">第四章 具体范例</a>
