--- a/article/article-9.html
+++ b/article/article-9.html
@@ -7,8 +7,11 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<title>手把手教你建设自己的“知识专题”</title>
 		<link rel="stylesheet" type="text/css" href="../style.css" />
+		<link rel="stylesheet" type="text/css" href="../css/prettyPhoto.css" />
 		<script src="../js/jquery-2.1.0.min.js"></script>
+		<script src="../js/jquery.prettyPhoto.js"></script>
 		<script src="../js/custom.js" type="text/javascript"></script>
+
 	</head>
 
 	<body>
@@ -89,10 +92,20 @@
 												<p class="indent">之前您已经了解了不同技术输出网站的特点，确定选择用那种方式输出网站，以下是具体方式，请您根据实际需要选择。</p>
 												<h3>1. 用Bitcron输出知识专题</h3>
 
-												<p>&nbsp;&nbsp;&nbsp;&nbsp;特别说明：本网站是“知识专题”的集合，此部分由小喆的“Bitcron知识专题”提供内容，链接为
+												<p>&nbsp;&nbsp;&nbsp;&nbsp;特别说明：本网站是的“知识专题”的集合，此部分由小喆的“手把手教你在Bitcron上建知识专题”提供内容，链接为
 													<a href="http://mml.bitcron.com/" target="_blank">http://mml.bitcron.com/，</a>具体内容请可点击前往学习，本网站不再赘述。</p>
-												<p class="indent">我总结了一下，最小的步骤共四步：（点击图片放大）</p>
-											
+
+												<p class="indent">我总结了一下，最小的步骤共三步：（点击图片放大）</p>
+												<div class="infopic">
+													<div class="picbox">
+														<ul class="gallery piclist">
+															<li>
+																<a href="../images/9-1.gif" rel="prettyPhoto[]"><img src="../images/9-1.gif" alt="" width="500" height="200" center/></a>
+															</li>
+														</ul>
+													</div>
+
+												</div>
 
 											</div>
 
